--- a/src/components/reusable/style.css
+++ b/src/components/reusable/style.css
@@ -1,9 +1,54 @@
+.carousel {
+    width: 100%;
+    height: 300px;
+    /* Adjust the height as needed */
+    overflow: hidden;
+    position: relative;
+}
+
+.carousel-inner {
+    display: flex;
+    animation: carouselAnimation 20s infinite;
+}
+
+.carousel-item {
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    /* Adjust the font size as needed */
+}
+
+@keyframes carouselAnimation {
+    0% {
+        transform: translateX(0);
+    }
+
+    25% {
+        transform: translateX(-100%);
+    }
+
+    50% {
+        transform: translateX(-200%);
+    }
+
+    75% {
+        transform: translateX(-300%);
+    }
+
+    100% {
+        transform: translateX(-400%);
+    }
+}
+
 .price-container {
     display: inline-flex;
     align-items: center;
     gap: 0.5rem;
 }
-
 
 .original-price {
     text-decoration: line-through;
@@ -13,16 +58,4 @@
 .discounted-price {
     font-weight: bold;
     color: green;
-}
-
-.btn-cart{
-    width: 100%;
-    background: #FFE0B3;
-    border: none;
-    border-radius: 0px 0px 8px 8px;
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
